[gd_scene load_steps=17 format=3 uid="uid://o7yfghs1u72h"]

[ext_resource type="Script" uid="uid://bfptg6ajb2fbn" path="res://scripts/levelutils/pause_menu.gd" id="1_jl6cr"]
[ext_resource type="FontFile" uid="uid://dl33nbvc6p8qq" path="res://fonts/double_pixel-7.ttf" id="1_qnkyx"]
[ext_resource type="Script" uid="uid://b58mtk61uuwa" path="res://scripts/levelutils/music_options.gd" id="3_o5xs8"]
[ext_resource type="Script" uid="uid://bbf5lsop3kmwx" path="res://scripts/levelutils/check_button_full_screen.gd" id="4_60qqr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jl6cr"]
bg_color = Color(0, 0, 0, 0.171)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6qmt"]
bg_color = Color(1, 0.722, 0.173, 0.873)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5xs8"]
bg_color = Color(1, 0.722, 0.173, 0.657)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60qqr"]
bg_color = Color(1, 0.722, 0.173, 0.873)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quwog"]
bg_color = Color(1, 0.722, 0.173, 0.657)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdxjv"]
bg_color = Color(1, 0.722, 0.173, 0.873)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru2pf"]
bg_color = Color(1, 0.722, 0.173, 0.657)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1u3jl"]
bg_color = Color(1, 0.722, 0.173, 0.873)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4xmm"]
bg_color = Color(1, 0.722, 0.173, 0.657)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vcc6c"]
color = Color(1, 0.849095, 0.613602, 1)
grow_begin = 0.0
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tm5sk"]
color = Color(1, 0.721569, 0.176471, 1)
thickness = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp8cm"]
bg_color = Color(1, 0.722, 0.173, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.722, 0.169, 0.486)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_bottom = 5.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jl6cr")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 1151.0
offset_bottom = 649.0
color = Color(0, 0, 0, 0.182)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.542
anchor_top = 0.468
anchor_right = 0.542
anchor_bottom = 0.468
offset_left = -309.384
offset_top = -213.264
offset_right = 235.616
offset_bottom = 223.736
theme_override_styles/panel = SubResource("StyleBoxFlat_jl6cr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 455.0
offset_top = 176.0
offset_right = 726.0
offset_bottom = 444.0

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxFlat_g6qmt")
theme_override_styles/hover = SubResource("StyleBoxFlat_g6qmt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o5xs8")
theme_override_styles/normal = SubResource("StyleBoxFlat_o5xs8")
text = "VOLVER"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxFlat_60qqr")
theme_override_styles/hover = SubResource("StyleBoxFlat_60qqr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_quwog")
theme_override_styles/normal = SubResource("StyleBoxFlat_quwog")
text = "OPCIONES"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 47
theme_override_styles/focus = SubResource("StyleBoxFlat_60qqr")
theme_override_styles/hover = SubResource("StyleBoxFlat_60qqr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_quwog")
theme_override_styles/normal = SubResource("StyleBoxFlat_quwog")
text = "MENU PRINCIPAL"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxFlat_tdxjv")
theme_override_styles/hover = SubResource("StyleBoxFlat_tdxjv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ru2pf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ru2pf")
text = "SALIR"

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.521
anchor_top = 0.575
anchor_right = 0.521
anchor_bottom = 0.575
offset_left = -285.192
offset_top = -282.6
offset_right = 259.808
offset_bottom = 154.4
theme_override_styles/panel = SubResource("StyleBoxFlat_jl6cr")

[node name="OptionPanelLabel" type="Label" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_right = 36.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 71
text = "Opciones"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButtonOptions" type="Button" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.931
anchor_right = 0.5
anchor_bottom = 0.931
offset_left = -73.5
offset_top = -21.915
offset_right = 65.5
offset_bottom = 18.085
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxFlat_1u3jl")
theme_override_styles/hover = SubResource("StyleBoxFlat_1u3jl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m4xmm")
theme_override_styles/normal = SubResource("StyleBoxFlat_m4xmm")
text = "VOLVER"

[node name="MusicSound" type="HSlider" parent="OptionsPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -92.0
offset_right = 153.5
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_vcc6c")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_tm5sk")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_tm5sk")
max_value = 5.0
step = 0.25
value = 2.0
script = ExtResource("3_o5xs8")
audio_bus_name = "Music"

[node name="SFX" type="HSlider" parent="OptionsPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -49.0
offset_right = 153.5
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_vcc6c")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_tm5sk")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_tm5sk")
max_value = 5.0
step = 0.25
value = 2.0
script = ExtResource("3_o5xs8")
audio_bus_name = "SFX"

[node name="CheckButton" type="CheckButton" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = 45.5
offset_right = 25.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_hp8cm")
button_pressed = true
text = "Pantalla Completa"
script = ExtResource("4_60qqr")

[node name="SFXLabel" type="Label" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.285
anchor_right = 0.194
anchor_bottom = 0.285
offset_left = -27.266
offset_top = 32.4
offset_right = 25.734
offset_bottom = 58.4
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 25
text = "SFX"

[node name="MusicLabel" type="Label" parent="OptionsPanel"]
layout_mode = 2
anchor_left = 0.194
anchor_top = 0.285
anchor_right = 0.194
anchor_bottom = 0.285
offset_left = -26.774
offset_top = -13.005
offset_right = 26.226
offset_bottom = 12.995
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_qnkyx")
theme_override_font_sizes/font_size = 25
text = "Musica"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="OptionsPanel/ExitButtonOptions" to="." method="_on_exit_button_options_pressed"]
[connection signal="value_changed" from="OptionsPanel/MusicSound" to="OptionsPanel/MusicSound" method="_on_value_changed"]
[connection signal="value_changed" from="OptionsPanel/SFX" to="OptionsPanel/SFX" method="_on_sfx_value_changed"]
[connection signal="toggled" from="OptionsPanel/CheckButton" to="OptionsPanel/CheckButton" method="_on_toggled"]
